root/frontend/src/pages/MultiListView/MultiListView.css
.navbar {
  margin: auto;
  max-width: 1400px;
  min-width: 920px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.mlv-navbar-right {
  display: flex;
  flex: 1 0 auto;
  justify-content: space-evenly;
  align-items: center;
}

.search-placeholder {
  min-width: 346px;
  min-height: 33px;
}
.mlv-lists-container {
  min-width: 800px;
  min-height: 500px;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 10px;
  margin: 20px 30px;
  z-index: 1;
}
.mlv-title {
  font-family: "Patrick Hand SC", cursive;
}
.mlv-link {
  color: inherit;
  text-decoration: inherit;
}

.home-button {
  height: 50px;
  width: 100px;
  cursor: pointer;
  font-family: "Patrick Hand SC", cursive;
  font-size: large;
  margin-left: 30px;
  background-color: var(--primary-bg-color);
  color: white;
  border: none;
  border-radius: 30px;
}

.add-button {
  position: fixed;
  right: 0;
  top: 30%;
  width: 60px;
  height: 60px;
  padding: 5px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  background-color: #f61067;
  border: none;
  z-index: 2;
}

.add-button:hover {
  width: 85px;
}

.mlv-footer {
  position: relative;
  bottom: 0;
}

